// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`icons/general/IconExclamationMark should correctly render default icon 1`] = `
<AccessibleSVG
  className="icon-exclamation-mark "
  height={20}
  viewBox="0 0 32 32"
  width={20}
>
  <circle
    className="fill-color"
    cx="16"
    cy="16"
    fill="#999"
    fillRule="nonzero"
    r="12"
  />
  <path
    d="M16,8 C16.8284271,8 17.5,8.67157288 17.5,9.5 L17.5,17.5 C17.5,18.3284271 16.8284271,19 16,19 C15.1715729,19 14.5,18.3284271 14.5,17.5 L14.5,9.5 C14.5,8.67157288 15.1715729,8 16,8 Z M16,24 C15.1715729,24 14.5,23.3284271 14.5,22.5 C14.5,21.6715729 15.1715729,21 16,21 C16.8284271,21 17.5,21.6715729 17.5,22.5 C17.5,23.3284271 16.8284271,24 16,24 Z"
    fill="#FFFFFF"
    fillRule="nonzero"
  />
</AccessibleSVG>
`;

exports[`icons/general/IconExclamationMark should correctly render icon with specified props 1`] = `
<AccessibleSVG
  className="icon-exclamation-mark test"
  height={100}
  title="title"
  viewBox="0 0 32 32"
  width={200}
>
  <circle
    className="fill-color"
    cx="16"
    cy="16"
    fill="#999"
    fillRule="nonzero"
    r="12"
  />
  <path
    d="M16,8 C16.8284271,8 17.5,8.67157288 17.5,9.5 L17.5,17.5 C17.5,18.3284271 16.8284271,19 16,19 C15.1715729,19 14.5,18.3284271 14.5,17.5 L14.5,9.5 C14.5,8.67157288 15.1715729,8 16,8 Z M16,24 C15.1715729,24 14.5,23.3284271 14.5,22.5 C14.5,21.6715729 15.1715729,21 16,21 C16.8284271,21 17.5,21.6715729 17.5,22.5 C17.5,23.3284271 16.8284271,24 16,24 Z"
    fill="#FFFFFF"
    fillRule="nonzero"
  />
</AccessibleSVG>
`;
